--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.3",
+    "@clerk/themes": "^2.1.36",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
