--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/themes": "^2.1.36",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
@@ -22,6 +23,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^17.2.1",
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
