--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.3",
     "@clerk/themes": "^2.1.36",
+    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/stripe-js": "^4.8.0",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +25,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "stripe": "^17.2.1",
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.4",
