--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@stripe/stripe-js": "^4.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint": "^8.57.1",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "mailtrap": "^3.4.0",
